--- a/themes/sumo-theme/static/css/custom.css
+++ b/themes/sumo-theme/static/css/custom.css
@@ -393,9 +393,17 @@ h3,
 h4,
 h5,
 h6 {
-scroll-margin-top: 100px;
+/* scroll-margin-top: 100px; */
 font-weight: 700;
 font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+}
+
+h1:before, h2:before, h3:before, h4:before, h5:before, h6:before {
+display: block;
+content: " ";
+height: 100px;
+margin-top: -100px;
+visibility: hidden;
 }
 
 h3 {
