--- a/themes/sumo-theme/static/css/custom.css
+++ b/themes/sumo-theme/static/css/custom.css
@@ -379,10 +379,6 @@ color: #17412f;
 margin-bottom: 60px;
 }
 
-img {
-pointer-events: none;
-}
-
 .feature-heading {
 margin-top: 5px;
 }
@@ -392,7 +388,7 @@ font-weight: 700;
 font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
-h1:before, h2:before, h3:before, h4:before, h5:before, h6:before {
+h1:before, h2:before, h3:before, h4:before {
 display: block;
 content: " ";
 height: 100px;
