small fixes for IE users

--- a/themes/sumo-theme/layouts/index.html
+++ b/themes/sumo-theme/layouts/index.html
@@ -280,12 +280,12 @@
 </div>
 
 <div style="margin: 46px 0;">
-  <a href="https://openmobility.eclipse.org/members/avl"><image src="{{ `images/logos/avl-logo.svg` | absURL }}" alt="AVL logo" class="member-logo"></image></a>
-  <a href="https://openmobility.eclipse.org/members/bosch"><image src="{{ `images/logos/bosch-logo.svg` | absURL }}" alt="Bosch logo" class="member-logo"></image></a>
-  <a href="https://openmobility.eclipse.org/members/dlr"><image src="{{ `images/logos/dlr-logo.svg` | absURL }}" alt="DLR logo" class="member-logo"></image></a>
+  <a href="https://openmobility.eclipse.org/members/avl"><image src="{{ `images/logos/avl-logo.png` | absURL }}" alt="AVL logo" class="member-logo"></image></a>
+  <a href="https://openmobility.eclipse.org/members/bosch"><image src="{{ `images/logos/bosch-logo.png` | absURL }}" alt="Bosch logo" class="member-logo"></image></a>
+  <a href="https://openmobility.eclipse.org/members/dlr"><image src="{{ `images/logos/dlr-logo.png` | absURL }}" alt="DLR logo" class="member-logo"></image></a>
   <a href="https://openmobility.eclipse.org/members/fraunhofer"><image src="{{ `images/logos/fraunhofer-logo.png` | absURL }}" alt="Fraunhofer logo" class="member-logo"></image></a>
   <a href="https://openmobility.eclipse.org/members/itemis"><image src="{{ `images/logos/itemis-logo.png` | absURL }}" alt="Itemis logo" class="member-logo"></image></a>
-  <a href="https://openmobility.eclipse.org/members/vector"><image src="{{ `images/logos/vector-logo.svg` | absURL }}" alt="Vector logo" class="member-logo"></image></a>
+  <a href="https://openmobility.eclipse.org/members/vector"><image src="{{ `images/logos/vector-logo.png` | absURL }}" alt="Vector logo" class="member-logo"></image></a>
 </div>
      
 </div>
