--- a/themes/sumo-theme/static/css/custom.css
+++ b/themes/sumo-theme/static/css/custom.css
@@ -84,6 +84,13 @@ border: 1px solid #338033;
 top: -10px;
 }
 
+.list-group-item {
+background-color: transparent;
+padding: 5px;
+margin-right: 20px;
+border: transparent;
+}
+
 .member-logo {
 /* width: 130px; */
 height: 45px;
