--- a/themes/sumo-theme/layouts/_default/single.html
+++ b/themes/sumo-theme/layouts/_default/single.html
@@ -9,12 +9,13 @@
     {{ if isset .Params "subtitle" }}
     <h4 style="text-align: center; color: #6d846e;">{{ index .Params "subtitle" }}</h4>
     {{ if isset .Params "conferencedate" }}
-    <h5 style="text-align: center; color: #6d846e;"><i class="fas fa-calendar-alt"></i> {{ index .Params "conferencedate" }} {{ if isset .Params "conferencelocation" }} | <i class="fas fa-map-marker-alt"></i> {{ index .Params "conferencelocation" }}{{ end }}</h5>
+    <p style="text-align: center; color: #6d846e;"><i class="fas fa-calendar-alt"></i> {{ index .Params "conferencedate" }} {{ if isset .Params "conferencelocation" }} | <i class="fas fa-map-marker-alt"></i> {{ index .Params "conferencelocation" }}{{ end }}</p>
     {{ end }}
     {{ end }}
   </div>
 
   <div class="container">
+    {{ if isset .Params "conference-page" }}{{- partial "conference_archive.html" . -}}{{ end }}
     {{ .Content }}
     {{ if isset .Site.Params "githubediturl" }}
     <div class="d-flex justify-content-end"><a href="{{ $.Site.Params.githubEditURL }}{{ .File.Path }}"><button type="button" class="btn btn-light btn-sm" title="Edit this page on GitHub"><i class="fas fa-pencil-alt"></i> Edit</button></a></div>
