--- a/themes/sumo-theme/layouts/index.html
+++ b/themes/sumo-theme/layouts/index.html
@@ -36,7 +36,7 @@
     }
   if (navigator.appVersion.indexOf("Mac") != -1) {
     Name =  "SUMO {{ $.Site.Params.Version }} for macOS";
-    DownloadLink = "{{ $.Site.Params.docsURL }}/Downloads.php#macos_binaries";
+    DownloadLink = "{{ $.Site.Params.docsURL }}/Downloads.php#macos";
     }
   if (navigator.appVersion.indexOf("X11") != -1) {
   Name = "SUMO {{ $.Site.Params.Version }} for Linux";
