--- a/themes/sumo-theme/layouts/index.html
+++ b/themes/sumo-theme/layouts/index.html
@@ -15,7 +15,7 @@
           <a class="dropdown-item" href="https://sumo.dlr.de/releases/{{ $.Site.Params.Version }}/sumo-all-{{ $.Site.Params.Version }}.tar.gz"><i class="fas fa-file-archive"></i> All-inclusive-tarball</a>
           <a class="dropdown-item" href="{{ $.Site.Params.docsURL }}/Downloads.php#ms_windows_binaries"><i class="fab fa-windows"></i> Windows</a>
           <a class="dropdown-item" href="{{ $.Site.Params.docsURL }}/Downloads.php#linux_binaries"><i class="fab fa-linux"></i> Linux</a>
-          <a class="dropdown-item" href="{{ $.Site.Params.docsURL }}/Downloads.php#macos_binaries"><i class="fab fa-apple"></i> macOS</a>
+          <a class="dropdown-item" href="{{ $.Site.Params.docsURL }}/Downloads.php#macos"><i class="fab fa-apple"></i> macOS</a>
         </div>
       </div>
     <br><a href="{{ $.Site.Params.docsURL }}/Downloads.php#sumo_-_latest_development_version" class="green-text"><small>Latest Development Version (Nightly Snapshots)</small></a>
