added the 2021 User Conference page

--- a/themes/sumo-theme/layouts/partials/conference_archive.html
+++ b/themes/sumo-theme/layouts/partials/conference_archive.html
@@ -4,6 +4,7 @@
       <div class="dropdown">
       <button type="button" class="btn btn-light btn-sm dropdown-toggle" data-toggle="dropdown" title="Explore previous conferences">[Archive] Select previous year</button>
           <div class="dropdown-menu text-center">
+              <a class="dropdown-item" href="{{ `2020` | absURL }}">2020</a>
               <a class="dropdown-item" href="{{ `2019` | absURL }}">2019</a>
               <a class="dropdown-item" href="{{ `2018` | absURL }}">2018</a>
               <a class="dropdown-item" href="{{ `2017` | absURL }}">2017</a>
