--- a/themes/sumo-theme/layouts/partials/conference_archive.html
+++ b/themes/sumo-theme/layouts/partials/conference_archive.html
@@ -12,6 +12,7 @@
               <a class="dropdown-item" href="{{ `2015` | absURL }}">2015</a>
               <a class="dropdown-item" href="{{ `2014` | absURL }}">2014</a>
               <a class="dropdown-item" href="{{ `2013` | absURL }}">2013</a>
+              <a class="dropdown-item" href="https://sumo.dlr.de/docs/SumoWorkshop2010.html">Workshop 2010</a>
           </div>
       </div> 
   </div>
