--- a/themes/sumo-theme/layouts/partials/footer.html
+++ b/themes/sumo-theme/layouts/partials/footer.html
@@ -56,7 +56,7 @@
                     <li><a href="{{ `contact` | absURL }}">Contact us</a></li>
                     <li><a href="{{ $.Site.Params.docsURL }}/FAQ.html">FAQ</a></li>
                     <li><a href="{{ $.Site.Params.docsURL }}/index.html">Documentation</a></li>
-                    <li><a href="{{ $.Site.Params.docsURL }}/Developer/Main.html">Developer Documentation</a></li>
+                    <li><a href="{{ $.Site.Params.docsURL }}/Developer/index.html">Developer Documentation</a></li>
                     <li><a href="https://sumo.dlr.de/daily/doxygen/">Doxygen Documentation</a></li>
                     <li><a href="{{ $.Site.Params.docsURL }}/Tutorials/index.html">Tutorials</a></li>
                     <li><a href="https://github.com/eclipse/sumo/issues">Issue Tracking</a></li>
