--- a/themes/sumo-theme/layouts/partials/footer.html
+++ b/themes/sumo-theme/layouts/partials/footer.html
@@ -40,7 +40,7 @@
                       <li><a href="https://www.github.com/eclipse/sumo">GitHub repository</a></li>
                       <li><a href="https://sourceforge.net/projects/sumo/">SourceForge</a></li>
                       <li><a href="https://dlr.de/ts/sumo">SUMO @ DLR</a></li>
-                      <li><a href="https://projects.eclipse.org/projects/technology.sumo">SUMO @ Eclipse</a></li>
+                      <li><a href="https://projects.eclipse.org/projects/automotive.sumo">SUMO @ Eclipse</a></li>
                     </ul>
                   </div>
                   <div class="col-md text-left"><b>Community</b>
