--- a/themes/sumo-theme/layouts/partials/footer.html
+++ b/themes/sumo-theme/layouts/partials/footer.html
@@ -15,7 +15,6 @@
         <g class="b"><path class="d" d="M1998,484H-243V100c445.8,26.8,794.2-4.1,1035-39,141-20.4,231.1-40.1,378-45,349.6-11.6,636.7,73.8,828,150"></path></g>
     </svg>
   </div>
-</section>
 
 <div class="d-block d-md-none" style="margin-top:20px;"></div>
   <footer class="footer" style="background: #ddd; margin-top: 0px; padding-top: 20px;">
@@ -35,9 +34,10 @@
                   </div>
                   <div class="col-md text-left"><b>Project</b>
                     <ul class="ul-no-bullet">
-                      <li><a href="https://projects.eclipse.org/projects/technology.sumo/who">Who's involved</a></li>
+                      <li><a href="https://projects.eclipse.org/projects/automotive.sumo/who">Who's involved</a></li>
                       <li><a href="https://sumo.dlr.de/daily/">Status of daily build and tests</a></li>
                       <li><a href="https://www.github.com/eclipse/sumo">GitHub repository</a></li>
+                      <li><a href="https://www.github.com/eclipse/sumo.website">Website GitHub repository</a></li>
                       <li><a href="https://sourceforge.net/projects/sumo/">SourceForge</a></li>
                       <li><a href="https://dlr.de/ts/sumo">SUMO @ DLR</a></li>
                       <li><a href="https://projects.eclipse.org/projects/automotive.sumo">SUMO @ Eclipse</a></li>
