added a link to the ChangeLog

--- a/themes/sumo-theme/layouts/partials/footer.html
+++ b/themes/sumo-theme/layouts/partials/footer.html
@@ -27,6 +27,7 @@
                   <ul class="ul-no-bullet">
                   <li><a href="{{ `about` | absURL }}">About</a></li>
                   <li><a href="{{ $.Site.Params.docsURL }}/Downloads.html">Downloads</a></li>
+                  <li><a href="{{ $.Site.Params.docsURL }}/ChangeLog.html">ChangeLog</a></li>
                   <li><a href="{{ $.Site.Params.docsURL }}/Libraries_Licenses.html">License</a></li>
                   <li><a href="{{ $.Site.Params.docsURL }}/Other/Projects.html">Projects using SUMO</a></li>
                   <li><a href="{{ $.Site.Params.docsURL }}/Publications.html">Publications</a></li>
