--- a/themes/sumo-theme/layouts/index.html
+++ b/themes/sumo-theme/layouts/index.html
@@ -18,8 +18,8 @@
           <a class="dropdown-item" href="{{ $.Site.Params.docsURL }}/Downloads.php#macos"><i class="fab fa-apple"></i> macOS</a>
         </div>
       </div>
-    <br><a href="{{ $.Site.Params.docsURL }}/Downloads.php#sumo_-_latest_development_version" class="green-text"><small>Latest Development Version (Nightly Snapshots)</small></a>
-    <br><a href="https://sourceforge.net/projects/sumo/files/sumo/" class="green-text"><small>Older releases</small></a></p>
+    <br><a href="{{ $.Site.Params.docsURL }}/Downloads.php#sumo_-_latest_development_version" class="green-text"><small>Latest Development Version (Nightly Snapshots) <i class="fas fa-angle-right"></i></small></a>
+    <br><a href="https://sourceforge.net/projects/sumo/files/sumo/" class="green-text"><small>Older releases <i class="fas fa-angle-right"></i></small></a></p>
 
     <a class="github-button" href="https://github.com/eclipse/sumo" data-size="large" class="btn btn-social-icon btn-lg btn-github"><span class="fab fa-github"> View on GitHub</span></a>
     <a class="github-button" href="https://github.com/eclipse/sumo" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star eclipse/sumo on GitHub">Star</a>    
