--- a/themes/sumo-theme/static/css/custom.css
+++ b/themes/sumo-theme/static/css/custom.css
@@ -9,10 +9,6 @@ position: relative;
 overflow-x: hidden;
 }
 
-.bg-light {
-background-color: rgba(255,255,255,0) !important;
-}
-
 .carousel-indicators li {
 border-radius: 12px;
 width: 12px;
@@ -95,7 +91,6 @@ border-radius: 0 !important;
 }
 
 .member-logo {
-/* width: 130px; */
 height: 45px;
 margin: 10px 30px !important;
 }
@@ -197,7 +192,6 @@ border-radius: 5px;
 
 .nav-link {
 color: #eff8ff !important;
-/*text-transform: uppercase;*/
 }
 
 .navbar-light .navbar-toggler-icon {
@@ -219,6 +213,10 @@ background-color: #338033 !important;
 
 .navbar-brand {
 margin-right: 0 !important;
+}
+
+#navbar-logo {
+transition: 0.4s;
 }
 
 @media (max-width: 768px) {
@@ -268,11 +266,6 @@ padding:7px; border: #ddd 1px solid;
 .col-md-4 {
 margin-bottom: 25px;
 }
-
-/*dropdown:hover>.dropdown-menu {
-display: block;
-background-color: #17412f;
-}*/
 
 .btn-padding {
 padding: 2px 14px !important;
@@ -404,14 +397,6 @@ font-weight: 700;
 font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
-/* h1:before, h2:before, h3:before, h4:before {
-display: block;
-content: " ";
-height: 100px;
-margin-top: -100px;
-visibility: hidden;
-} */
-
 h3 {
 margin-top: 40px;
 }
@@ -453,7 +438,6 @@ padding: .5rem .5rem;
 .card {
 border-radius: .6rem !important;
 box-shadow: 0 8px 12px 1px rgb(29 17 51 / 4%), 0 3px 16px 2px rgb(9 32 77 / 12%), 0 5px 10px -3px rgb(29 17 51 / 12%);
-/*box-shadow: 0 1rem 1rem rgba(0,0,0,.05) !important;*/
 border: none !important;
 }
 
