toc added to conference page, anchor link padding fixed

--- a/themes/sumo-theme/layouts/index.html
+++ b/themes/sumo-theme/layouts/index.html
@@ -3,7 +3,7 @@
     <div class="container" style="margin-top: 100px; margin-bottom: 20px;">
       <div class="row">
         <div class="col-md-6"> <!-- first col -->
-        <h1 style="color: #17412f;">Simulation of Urban MObility</h1>
+        <div class="page-title" style="color: #17412f;">Simulation of Urban MObility</div>
         <br>    
         <p>Welcome to Eclipse <b>SUMO</b> (Simulation of Urban MObility), an open source, highly portable, microscopic and continuous multi-modal traffic simulation package designed to handle large networks.</p>
 
