--- a/themes/sumo-theme/layouts/partials/conference_archive.html
+++ b/themes/sumo-theme/layouts/partials/conference_archive.html
@@ -1,19 +1,18 @@
 <!-- archive - previous years -->
-<div class="text-right">
-  <div class="btn-group" style="margin-bottom:10px;">
-      <div class="dropdown">
-      <button type="button" class="btn btn-light btn-sm dropdown-toggle" data-toggle="dropdown" title="Explore previous conferences">[Archive] Select previous year</button>
-          <div class="dropdown-menu text-center">
-              <a class="dropdown-item" href="{{ `2020` | absURL }}">2020</a>
-              <a class="dropdown-item" href="{{ `2019` | absURL }}">2019</a>
-              <a class="dropdown-item" href="{{ `2018` | absURL }}">2018</a>
-              <a class="dropdown-item" href="{{ `2017` | absURL }}">2017</a>
-              <a class="dropdown-item" href="{{ `2016` | absURL }}">2016</a>
-              <a class="dropdown-item" href="{{ `2015` | absURL }}">2015</a>
-              <a class="dropdown-item" href="{{ `2014` | absURL }}">2014</a>
-              <a class="dropdown-item" href="{{ `2013` | absURL }}">2013</a>
-              <a class="dropdown-item" href="https://sumo.dlr.de/docs/SumoWorkshop2010.html">Workshop 2010</a>
-          </div>
-      </div> 
-  </div>
-  </div>
+<p class="sidebar-title"><b>Archive</b></p>
+<div class="btn-group">
+    <div class="dropdown">
+    <button type="button" class="btn btn-light btn-archive btn-sm dropdown-toggle" data-toggle="dropdown" title="Explore previous conferences">Select year </button>
+        <div class="dropdown-menu text-center">
+            <a class="dropdown-item" href="{{ `2020` | absURL }}">2020</a>
+            <a class="dropdown-item" href="{{ `2019` | absURL }}">2019</a>
+            <a class="dropdown-item" href="{{ `2018` | absURL }}">2018</a>
+            <a class="dropdown-item" href="{{ `2017` | absURL }}">2017</a>
+            <a class="dropdown-item" href="{{ `2016` | absURL }}">2016</a>
+            <a class="dropdown-item" href="{{ `2015` | absURL }}">2015</a>
+            <a class="dropdown-item" href="{{ `2014` | absURL }}">2014</a>
+            <a class="dropdown-item" href="{{ `2013` | absURL }}">2013</a>
+            <a class="dropdown-item" href="https://sumo.dlr.de/docs/SumoWorkshop2010.html">Workshop 2010</a>
+        </div>
+    </div> 
+</div>
