--- a/themes/sumo-theme/layouts/_default/single.html
+++ b/themes/sumo-theme/layouts/_default/single.html
@@ -4,19 +4,28 @@
     <div class="svg-rounded">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 144.54 17.34" preserveAspectRatio="none" fill="#f8f8f8"><path d="M144.54,17.34H0V0H144.54ZM0,0S32.36,17.34,72.27,17.34,144.54,0,144.54,0"></path></svg>
     </div>
-    <h1 class="text-center" style="margin-top: 80px; color:#17412f;">{{ .Title }}</h1>
+    <div class="text-center page-title" style="margin-top: 80px; color:#17412f;">{{ .Title }}</div>
   
     {{ if isset .Params "subtitle" }}
     <h4 style="text-align: center; color: #6d846e;">{{ index .Params "subtitle" }}</h4>
     {{ if isset .Params "conferencedate" }}
-    <p style="text-align: center; color: #6d846e;"><i class="fas fa-calendar-alt"></i> {{ index .Params "conferencedate" }} {{ if isset .Params "conferencelocation" }} | <i class="fas fa-map-marker-alt"></i> {{ index .Params "conferencelocation" }}{{ end }}</p>
+    <p style="text-align: center; color: #6d846e;"><i class="fas fa-calendar-alt"></i> {{ index .Params "conferencedate" }} {{ if isset .Params "conferencelocation" }} &nbsp;&nbsp;•&nbsp;&nbsp; <i class="fas fa-map-marker-alt"></i> {{ index .Params "conferencelocation" }}{{ end }}</p>
     {{ end }}
     {{ end }}
   </div>
 
   <div class="container">
-    {{ if isset .Params "conference-page" }}{{- partial "conference_archive.html" . -}}{{ end }}
+    {{ if isset .Params "conference-page" }}
+    <div class="row">
+    <div class="col-md-10">{{ .Content }}</div>
+    <div class="col-md-2"><div style="border-left: 1px solid #d4d4d4; padding-left: 10px;">{{- partial "conference_archive.html" . -}}<br><br>{{- partial "toc.html" . -}}</div></div>
+    </div>
+    {{ else }}
     {{ .Content }}
+    {{ end }}
+    
+    
+  
     {{ if isset .Site.Params "githubediturl" }}
     <div class="d-flex justify-content-end"><a href="{{ $.Site.Params.githubEditURL }}{{ .File.Path }}"><button type="button" class="btn btn-light btn-sm" title="Edit this page on GitHub"><i class="fas fa-pencil-alt"></i> Edit</button></a></div>
     {{ end }}
