--- a/themes/sumo-theme/static/css/custom.css
+++ b/themes/sumo-theme/static/css/custom.css
@@ -7,6 +7,7 @@ color: #403b3b;
 html, body {
 position: relative;
 overflow-x: hidden;
+scroll-padding-top: 80px;
 }
 
 .carousel-indicators li {
@@ -346,13 +347,20 @@ background-image: linear-gradient(0deg, rgba(255, 255, 255, 0) 0%, rgb(235,243,2
 
 .page-title {
 color: #241c15;
-text-align: center;
-font-size: 60px;
-font-family: 'Playfair Display', serif;
+font-size: 2.5rem;
+font-weight: 700;
+margin-bottom: .5rem;
+line-height: 1.2;
+font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
 .page-section {
 padding: 60px;
+}
+
+.sidebar-title {
+margin-bottom: 1.3em;
+font-size: .875rem;
 }
 
 .green-text {
@@ -397,8 +405,18 @@ font-weight: 700;
 font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
+h1 {
+margin-top: 40px;
+font-size: 1.75rem;
+}
+
+h2 {
+font-size: 1.5rem;
+}
+
 h3 {
 margin-top: 40px;
+font-size: 1.25rem;
 }
 
 .carousel-inner img {
@@ -431,8 +449,20 @@ padding-left: 0;
 color: #17412f !important;
 }
 
+.btn-archive {
+background-color: rgb(240, 240, 240);
+}
+
 .btn-group-lg>.btn, .btn-lg {
 padding: .5rem .5rem;
+}
+
+#TableOfContents ul {
+padding-left: 20px;
+}
+
+#TableOfContents {
+font-size: 0.9rem;
 }
 
 .card {
