--- a/themes/sumo-theme/layouts/index.html
+++ b/themes/sumo-theme/layouts/index.html
@@ -222,7 +222,7 @@
             <i class="fas fa-traffic-light fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="feature-heading">Traffic Lights</h4>
-          <p class="text-muted">Modify traffic light schedules visually with NetEdit, import schedules from external data sources or generate schedules automatically</p>
+          <p class="text-muted">Modify traffic light schedules visually with netedit, import schedules from external data sources or generate schedules automatically</p>
         </div>
       </div> <!-- end 3 row -->
 
