--- a/themes/sumo-theme/layouts/index.html
+++ b/themes/sumo-theme/layouts/index.html
@@ -8,13 +8,12 @@
         <p>Welcome to Eclipse <b>SUMO</b> (Simulation of Urban MObility), an open source, highly portable, microscopic and continuous multi-modal traffic simulation package designed to handle large networks.</p>
 
       <p><div class="btn-group">
-        <a href="https://sumo.dlr.de/releases/{{ $.Site.Params.Version }}/sumo-win64-{{ $.Site.Params.Version }}.msi" id="download-button" type="button" class="btn btn-success" style="-webkit-appearance: none; box-shadow: 0 8px 36px -3px rgba(20,45,100,.35);">SUMO {{ $.Site.Params.Version }} for Windows 64bits</a>
+        <a href="https://sumo.dlr.de/releases/{{ $.Site.Params.Version }}/sumo-win64-{{ $.Site.Params.Version }}.msi" id="download-button" type="button" class="btn btn-success" style="-webkit-appearance: none; box-shadow: 0 8px 36px -3px rgba(20,45,100,.35);">SUMO {{ $.Site.Params.Version }} for Windows 64-bit</a>
         <button type="button" class="btn btn-success dropdown-toggle dropdown-toggle-split" data-toggle="dropdown"><span class="caret"></span></button>
         <div class="dropdown-menu download-menu">
           <a class="dropdown-item" href="{{ $.Site.Params.docsURL }}/Downloads.php#sources"><i class="fas fa-file-code"></i> Sources</a>
-          <a class="dropdown-item" href="https://sumo.dlr.de/releases/{{ $.Site.Params.Version }}/sumo-all-{{ $.Site.Params.Version }}.tar.gz"><i class="fas fa-file-archive"></i> All-inclusive-tarball</a>
-          <a class="dropdown-item" href="{{ $.Site.Params.docsURL }}/Downloads.php#ms_windows_binaries"><i class="fab fa-windows"></i> Windows</a>
-          <a class="dropdown-item" href="{{ $.Site.Params.docsURL }}/Downloads.php#linux_binaries"><i class="fab fa-linux"></i> Linux</a>
+          <a class="dropdown-item" href="{{ $.Site.Params.docsURL }}/Downloads.php#windows"><i class="fab fa-windows"></i> Windows</a>
+          <a class="dropdown-item" href="{{ $.Site.Params.docsURL }}/Downloads.php#linux"><i class="fab fa-linux"></i> Linux</a>
           <a class="dropdown-item" href="{{ $.Site.Params.docsURL }}/Downloads.php#macos"><i class="fab fa-apple"></i> macOS</a>
         </div>
       </div>
@@ -31,7 +30,7 @@
   var Name = "Download SUMO";
   var DownloadLink = "https://sumo.dlr.de/download";
   if (navigator.appVersion.indexOf("Win") != -1) {
-    Name = "SUMO {{ $.Site.Params.Version }} for Windows 64bits";
+    Name = "SUMO {{ $.Site.Params.Version }} for Windows 64-bit";
     DownloadLink = "https://sumo.dlr.de/releases/{{ $.Site.Params.Version }}/sumo-win64-{{ $.Site.Params.Version }}.msi";
     }
   if (navigator.appVersion.indexOf("Mac") != -1) {
@@ -111,7 +110,7 @@
 
     <div class="col-md-4">
       <div class="d-md-none" style="margin-top: 14px;"></div>
-      <div class="btn-group btn-group-lg" style="width: 100%; margin-bottom: 30px;">
+      <div class="btn-group btn-group-lg" style="width: 100%; margin-bottom: 10px;">
         <a class="btn btn-light" href="https://github.com/eclipse/sumo" aria-label="GitHub"><span class="fab fa-github"></span></a>
         <a class="btn btn-light" href="https://twitter.com/eclipsesumo" aria-label="Twitter"><span class="fab fa-twitter"></span></a>
         <a class="btn btn-light" href="https://facebook.com/simulationofurbanmobility" aria-label="Facebook"><span class="fab fa-facebook"></span></a>
@@ -120,7 +119,16 @@
         <a class="btn btn-light" href="{{ `contact` | absURL }}" aria-label="contact"><span class="fas fa-envelope"></span></a>
       </div>
       <div style="height: 100%;">
-        <a class="twitter-timeline" data-height="90%" data-theme="light" href="https://twitter.com/EclipseSUMO?ref_src=twsrc%5Etfw"></a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+      <div class="alert alert-light" role="alert" style="margin-top: 30px;">
+        <img src="{{ `images/banner_2022.png` | absURL }}" style="width:100%;" alt="Conference artwork" class="img-responsive"/>
+        <h5 class="alert-heading" style="color: #17412f;">SUMO User Conference</h5>
+        <p class="small">The conference focuses on presenting new and unique results in the field of mobility simulation and modelling using openly available tools and data.</p>
+        <hr>
+        <p class="mb-0">
+          <a href="{{ `conference` | absURL }}" class="card-link small">More info <i class="fas fa-angle-right"></i></a>
+          <a href="https://easychair.org/conferences/?conf=sumo2022" class="card-link small">Paper submission <i class="fas fa-angle-right"></i></a>
+        </p>
+      </div>
       </div>
     </div>
 
