adding Zoom registration link 2022

--- a/themes/sumo-theme/layouts/index.html
+++ b/themes/sumo-theme/layouts/index.html
@@ -125,8 +125,9 @@
         <p class="small">The conference focuses on presenting new and unique results in the field of mobility simulation and modelling using openly available tools and data.</p>
         <hr>
         <p class="mb-0">
-          <a href="{{ `conference` | absURL }}" class="card-link small">More info <i class="fas fa-angle-right"></i></a>
-          <a href="https://easychair.org/conferences/?conf=sumo2022" class="card-link small">Paper submission <i class="fas fa-angle-right"></i></a>
+          <a href="{{ `conference` | absURL }}" class="card-link small">More info</a>
+          <a href="https://easychair.org/conferences/?conf=sumo2022" class="card-link small">Paper submission</a>
+          <a href="https://us06web.zoom.us/meeting/register/tZ0sd-Chpj4vH9PmVD8w-2uLqMy8n2Ssv1x_" class="card-link small">Registration</a>
         </p>
       </div>
       </div>
