--- a/themes/sumo-theme/layouts/partials/conference_archive.html
+++ b/themes/sumo-theme/layouts/partials/conference_archive.html
@@ -4,6 +4,7 @@
     <div class="dropdown">
     <button type="button" class="btn btn-light btn-archive btn-sm dropdown-toggle" data-toggle="dropdown" title="Explore previous conferences">Select year </button>
         <div class="dropdown-menu text-center">
+            <a class="dropdown-item" href="{{ `conference` | absURL }}">Current conference <i class="fas fa-angle-double-right"></i></a>
             <a class="dropdown-item" href="{{ `2021` | absURL }}">2021</a>
             <a class="dropdown-item" href="{{ `2020` | absURL }}">2020</a>
             <a class="dropdown-item" href="{{ `2019` | absURL }}">2019</a>
