using now fontawesome v. 6.1.1

--- a/themes/sumo-theme/layouts/partials/head.html
+++ b/themes/sumo-theme/layouts/partials/head.html
@@ -22,7 +22,7 @@
     <script src="{{ `libraries/popper.min.js` | absURL }}"></script>
     <script src="{{ `libraries/bootstrap.min.js` | absURL }}"></script>
     <link rel="stylesheet" href="{{ `css/custom.css` | absURL }}">
-    <link rel="stylesheet" href="{{ `libraries/all.css` | absURL }}">
+    <link rel="stylesheet" href="{{ `libraries/fontawesome/css/all.min.css` | absURL }}">
     <script src="{{ `libraries/buttons.js` | absURL }}"></script>
 
     <script>
