--- a/themes/sumo-theme/layouts/index.html
+++ b/themes/sumo-theme/layouts/index.html
@@ -66,6 +66,9 @@
         <img src="{{ `images/screenshots/screenshot3.png` | absURL }}" alt="screenshot #3">
       </div>
       <div class="carousel-item">
+        <img src="{{ `images/screenshots/screenshot7.png` | absURL }}" alt="screenshot #7">
+      </div>
+      <div class="carousel-item">
         <img src="{{ `images/screenshots/screenshot4.png` | absURL }}" alt="screenshot #4">
       </div>
       <div class="carousel-item">
@@ -88,6 +91,7 @@
     <li data-target="#sumoScreenshots" data-slide-to="3"></li>
     <li data-target="#sumoScreenshots" data-slide-to="4"></li>
     <li data-target="#sumoScreenshots" data-slide-to="5"></li>
+    <li data-target="#sumoScreenshots" data-slide-to="6"></li>
   </ul>
         </div>
         
